<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:layout_width="wrap_content">
    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />
    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_send"
    android:onClick="sendMessage" />
    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/fragment_static_text"
    android:onClick="sendToFragment"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_dynamic_text"
        android:onClick="sendToDynamicFragment"
        />

    <LinearLayout android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:orientation="horizontal">
        <EditText android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_username" />
        <EditText android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_password" />
        <Button
            android:layout_height="wrap_content"
            android:text="登錄"
            android:onClick="welcomeToSmc"
            android:layout_width="match_parent" />
    </LinearLayout>
</LinearLayout>